# ChangeLog for gnome-extra/libgtkhtml
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgtkhtml/ChangeLog,v 1.43 2003/09/12 09:22:50 spider Exp $

*libgtkhtml-3.0.8-r2 (12 Sep 2003)

  12 Sep 2003; <spider@gentoo.org> libgtkhtml-3.0.4.ebuild,
  libgtkhtml-3.0.5.ebuild, libgtkhtml-3.0.7.ebuild,
  libgtkhtml-3.0.8-r1.ebuild, libgtkhtml-3.0.8-r2.ebuild,
  libgtkhtml-3.0.8.ebuild:
  Removed bonobo-activation dep's, made a last-version bump as well.

  08 Sep 2003; Alexander Gabert <pappy@gentoo.org> libgtkhtml-3.0.7.ebuild,
  libgtkhtml-3.0.8-r1.ebuild:
  changed hardened-gcc, exclude flags not needed any more

*libgtkhtml-2.4.0 (07 Sept 2003)

  07 Sept 2003; foser <foser@gentoo.org> libgtkhtml-2.4.0.ebuild :
  GNOME 2.4 RC1

  06 Sep 2003; Alexander Gabert <pappy@gentoo.org> libgtkhtml-3.0.7.ebuild,
  libgtkhtml-3.0.8-r1.ebuild:
  add hardened-gcc exclude flags

*libgtkhtml-3.0.8-r1 (20 Aug 2003)

  20 Aug 2003; Aron Griffis <agriffis@gentoo.org> libgtkhtml-3.0.8-r1.ebuild,
  files/libgtkhtml-3.0.8-alpha.patch:
  Add patch to prevent segfaults on alpha

  12 Aug 2003; Aron Griffis <agriffis@gentoo.org> libgtkhtml-3.0.8.ebuild:
  Add ~alpha to KEYWORDS

*libgtkhtml-3.0.8 (11 Aug 2003)

  11 Aug 2003; Martin Schlemmer <azarah@gentoo.org> libgtkhtml-3.0.8.ebuild:
  New version.

  15 Jul 2003; Todd Sunderlin <todd@gentoo.org> libgtkhtml-2.2.1.ebuild:
  Set stable for sparc

*libgtkhtml-3.0.7 (11 Jul 2003)

  04 Aug 2003; Guy Martin <gmsoft@gentoo.org> libgtkhtml-3.0.7.ebuild :
  Marked stable on hppa.

  11 Jul 2003; Alastair Tse <liquidx@gentoo.org> libgtkhtml-3.0.7.ebuild,
  files/libgtkhtml-3.0.7-libtool.patch:
  finally! i have gotten to the bottom of this libtool fiasco. right now i've
  replaced the ugly hack with a less ugly, yet still hacky way of dealing with
  the strange reverse-deps patch from the libtool.eclass. this way, the