@@ -1,14 +1,15 @@
-MD5 8d2b0e2a6bab44aa4316dc2ea1b545b0 ChangeLog 6241
-MD5 a98a27c7ff7d616fdd134e1cb90d3007 libgtkhtml-2.0.2.ebuild 735
-MD5 eccf98bc3b301df70dd18bcc9b94440b libgtkhtml-2.2.1.ebuild 803
-MD5 a7ec932042000406f51f7fbceb8e9f82 libgtkhtml-2.2.3.ebuild 817
-MD5 4b66633ff9275bc92b181d8bdccc1cea libgtkhtml-2.2.4.ebuild 852
-MD5 6c28af1ecd345f6fed88fdc05529eefa libgtkhtml-2.4.0.ebuild 851
-MD5 910b03f9c7d62f18bfa01b3785a04165 libgtkhtml-3.0.7.ebuild 1475
-MD5 71535e505952c1ecd17d90786458ed44 libgtkhtml-3.0.8-r1.ebuild 1580
 MD5 bef8b3805f5174b0c4412e4e8494ed2e libgtkhtml-3.0.8-r2.ebuild 1580
+MD5 4b66633ff9275bc92b181d8bdccc1cea libgtkhtml-2.2.4.ebuild 852
+MD5 1657da923d6a0431051e621c011e1985 libgtkhtml-2.4.0.ebuild 853
+MD5 eccf98bc3b301df70dd18bcc9b94440b libgtkhtml-2.2.1.ebuild 803
+MD5 71535e505952c1ecd17d90786458ed44 libgtkhtml-3.0.8-r1.ebuild 1580
+MD5 a7ec932042000406f51f7fbceb8e9f82 libgtkhtml-2.2.3.ebuild 817
+MD5 910b03f9c7d62f18bfa01b3785a04165 libgtkhtml-3.0.7.ebuild 1475
+MD5 81191f72e50c9b32e58b00b19c61fc2d ChangeLog 6343
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
-MD5 277fd5b1d3246d060bc3821f73bf4392 files/digest-libgtkhtml-2.0.2 69
+MD5 c802878860f7a2692df330e54e635c0c files/libgtkhtml-3.0.7-libtool.patch 656
+MD5 91961ab08a6720382576581f1c879963 files/libgtkhtml-3.0.8-alpha.patch 700
+MD5 8b985f9a98b7a90232d5ea193b8078d1 files/libgtkhtml-2.2.0-alpha.patch 652
 MD5 470c04d01c1c093ee1439465a3c650ea files/digest-libgtkhtml-2.2.1 69
 MD5 59cd7ffde71d082b5c68834945dc71cc files/digest-libgtkhtml-2.2.3 69
 MD5 931991370c138ac1ef64cd5df5b57387 files/digest-libgtkhtml-2.2.4 69
@@ -16,6 +17,3 @@ MD5 c4945ff6d58733accdf9ff738ddc34b1 files/digest-libgtkhtml-2.4.0 69
 MD5 50c625f91326bee698360208ee9aa2cc files/digest-libgtkhtml-3.0.7 67
 MD5 70d6bcd78d5175bb973a7a46c4bae08e files/digest-libgtkhtml-3.0.8-r1 67
 MD5 70d6bcd78d5175bb973a7a46c4bae08e files/digest-libgtkhtml-3.0.8-r2 67
-MD5 8b985f9a98b7a90232d5ea193b8078d1 files/libgtkhtml-2.2.0-alpha.patch 652
-MD5 c802878860f7a2692df330e54e635c0c files/libgtkhtml-3.0.7-libtool.patch 656
-MD5 91961ab08a6720382576581f1c879963 files/libgtkhtml-3.0.8-alpha.patch 700
