@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgtkhtml/libgtkhtml-2.4.0.ebuild,v 1.1 2003/09/07 22:07:16 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgtkhtml/libgtkhtml-2.4.0.ebuild,v 1.2 2003/09/14 11:15:02 foser Exp $
 
 inherit eutils gnome2
 
@@ -15,7 +15,7 @@ KEYWORDS="~x86 ~ppc ~alpha ~sparc ~amd64"
 RDEPEND=">=x11-libs/gtk+-2
 	>=dev-libs/libxml2-2.4.16
 	>=gnome-base/gnome-vfs-2
-	>=gnome-base/gail-1"
+	>=gnome-base/gail-1.3"
 
 DEPEND="${RDEPEND}
 	 >=dev-util/pkgconfig-0.12.0"
