@@ -1,6 +1,6 @@
 # ChangeLog for gnome-extra/libgtkhtml
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgtkhtml/ChangeLog,v 1.43 2003/09/12 09:22:50 spider Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/libgtkhtml/ChangeLog,v 1.44 2003/09/14 11:15:02 foser Exp $
 
 *libgtkhtml-3.0.8-r2 (12 Sep 2003)
 
@@ -15,6 +15,9 @@
   changed hardened-gcc, exclude flags not needed any more
 
 *libgtkhtml-2.4.0 (07 Sept 2003)
+
+  14 Sep 2003; foser <foser@gentoo.org> libgtkhtml-2.4.0.ebuild :
+  Correct gail dep version (#28643)
 
   07 Sept 2003; foser <foser@gentoo.org> libgtkhtml-2.4.0.ebuild :
   GNOME 2.4 RC1
